made another buy ticket form